# wave_simulation

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
src/cuerda/: __init__.py  analysis.py  cli.py  config.py  io.py  model.py  plots.py
tests/: test_model.py
