[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "cuerda-vibrante"
version = "1.0.0"
description = "Simulación de una cuerda vibrante 1D por diferencias finitas"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7"
]

[project.scripts]
cuerda = "cuerda.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7"
]

[tool.uv.build-backend]
module-name = "cuerda"
module-root = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]